MDEV-5924 MariaDB could crash after changing the query_cache size with SET GLOBAL

* remove incorrect assertion (it didn't take into account concurrent clients)
* fix the comment